feat: [core-services] Create respomse mapper
