# apps/core-service/internal/api/account_response.go
@@ -1,0 +1,33 @@
+package api
+
+import (
+	db "github.com/DewaSRY/core-service/db/sqlc"
+)
+
+type accountResponse struct {
+	ID        int64  `json:"id"`
+	Owner     string `json:"owner"`
+	Balance   string `json:"balance"`
+	Currency  string `json:"currency"`
+	UserID    int64  `json:"user_id"`
+	CreatedAt string `json:"created_at"`
+}
+
+func toAccountResponse(account db.ListAccountsByUserIdRow) accountResponse {
+	return accountResponse{
+		ID:        account.ID,
+		Owner:     account.Owner,
+		Balance:   account.Balance,
+		Currency:  account.Currency,
+		UserID:    account.UserID.Int64,
+		CreatedAt: account.CreatedAt.Format("2006-01-02 15:04:05"),
+	}
+}
+
+func toListAccountResponse(accounts []db.ListAccountsByUserIdRow) []accountResponse {
+	accountResponses := make([]accountResponse, len(accounts))
+	for i, account := range accounts {
+		accountResponses[i] = toAccountResponse(account)
+	}
+	return accountResponses
+}
