# apps/core-service/internal/docs/swagger.json
@@ -53,7 +53,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/db.Account"
+                                                "$ref": "#/definitions/api.accountResponse"
                                             }
                                         },
                                         "meta": {
@@ -124,7 +124,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/db.Account"
+                                            "$ref": "#/definitions/api.accountResponse"
                                         }
                                     }
                                 }
@@ -188,7 +188,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/db.Account"
+                                            "$ref": "#/definitions/api.accountResponse"
                                         }
                                     }
                                 }
@@ -274,7 +274,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/db.Entry"
+                                                "$ref": "#/definitions/api.accountResponse"
                                             }
                                         },
                                         "meta": {
@@ -860,6 +860,29 @@
                 }
             }
         },
+        "api.accountResponse": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.createAccountRequest": {
             "type": "object",
             "required": [
@@ -1045,31 +1068,6 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "$ref": "#/definitions/sql.NullInt64"
-                }
-            }
-        },
-        "db.Entry": {
-            "type": "object",
-            "properties": {
-                "account_id": {
-                    "type": "integer"
-                },
-                "amount": {
-                    "description": "Amount cannot be negative, it is the amount of money added or subtracted from the account",
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "type": {
-                    "description": "Type use to define the purpose of the entry",
                     "type": "string"
                 },
                 "user_id": {
